tests/NormalTests/paczka1/small_fuzzy/43986460.err
Error in line 3: Rn2He A946 11,2
Error in line 13: SgPtbBqDs6 A946 3G6,6
